Impliment HSC Update
-Update numbers range for different operators
-Badges tracker for HSC
-Reset Option for HSC
-Increasing difficulty per 10 qs

--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -438,7 +438,7 @@
     // }
 
     .game-lower {
-        max-width: 40vw;
+        // max-width: 40vw;
 
     }
 }
@@ -540,7 +540,7 @@
     // }
 
     .game-lower {
-        max-width: 40vw;
+        // max-width: 40vw;
 
     }
 
