--- a/public/scss/_highScoreChallengeAndQuiz.scss
+++ b/public/scss/_highScoreChallengeAndQuiz.scss
@@ -34,7 +34,7 @@
 }
 
 .score-text {
-  font-size: 1.8em;
+  font-size: 1.6em;
   color: $chalk-white;
 }
 
@@ -122,6 +122,7 @@
   border: 1px solid black;
   background-color: white;
   margin-bottom: 20px;
+  // min-width:100vw;
 }
 
 .tracker {
@@ -151,7 +152,7 @@
 }
 .game-box{
   background-color:rgba(255,255,255,0.1);
-  display:flex;
+  // display:flex;
   padding:5px;
 }
 
@@ -289,8 +290,9 @@
   border-radius: 25px;
   text-rendering: optimizeLegibility;
   font-size: 16px; 
+  font-family:'Pangolin';
   color:$chalkboard-green;
-  background-color: $wood;
+  background-color: #f3e4be;
   color: $chalkboard-green;
   box-shadow: $cardShadow;
   transform: translate(0px, 0px);
@@ -302,3 +304,33 @@
   box-shadow: 0px 0px 1px black;
   transform: translate(2px, 2px);
 }
+.badge-tracker-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;;
+   & > .badge{
+    width:15vw;
+    >*{
+      font-size:12px;
+    }
+  }
+}
+.start-over{
+  padding:5px;
+  
+}
+.hsc-start-over{
+  border: 3px solid #51addd;
+  padding: 4.5px 10px;
+  border-radius: 20px;
+  color: $chalkboard-green;
+  background-color: #f3e4be;
+  cursor:pointer;
+  box-shadow:$cardShadow;
+  transition:box-shadow 200ms ease;
+
+ &:active{
+  box-shadow: 0px 0px 1px black;
+ transform: translate(2px, 2px);
+}}
