--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -243,7 +243,7 @@ body {
 
   }
   .selected-operator-container,.selected-difficulty-container,.selected-operator-container-menu,.selected-difficulty-container-menu{
-    background:#f3e6aa;
+    background:#f3e6c2;
     color:$chalkboard-green;
     border-radius:20px;
     padding:5px 15px;
