--- a/public/scss/_lessonsFractions.scss
+++ b/public/scss/_lessonsFractions.scss
@@ -63,7 +63,7 @@
     top:0;
     display:none;
     flex-direction:column;
-    max-width: 100%; 
+    width: 90%; 
     padding:10px;
     // left:100%;
     // margin-right: 20px;
