--- a/public/scss/_burger.scss
+++ b/public/scss/_burger.scss
@@ -10,8 +10,8 @@
     display: flex; // make none after editing.
   background:rgba(255, 255, 255, 0);
     position: absolute;
-    top: 3vh;
-    right: 3vw;
+    top: 3vmin;
+    right: 3vmin;
     transition: all 200ms ease;
     z-index:200;
   
