--- a/public/scss/_highScoreChallengeAndQuiz.scss
+++ b/public/scss/_highScoreChallengeAndQuiz.scss
@@ -10,7 +10,7 @@
 .question-field{
   @include center-flex;
   font-family: $chalkboardFont;
-  font-size: 2.2em;
+  font-size: 1.8em;
   color: #eae6df;
   text-align: center;
   max-width: 100%;
@@ -27,14 +27,14 @@
 
 .high-title,
 .score-title {
-  font-size: 1.1rem;
-  line-height: 2em;
+  font-size: 14px;
+  line-height: 1.8em;
   margin-right: 15px;
   color: $chalk-white;
 }
 
 .score-text {
-  font-size: 1.6em;
+  font-size: 14px;
   color: $chalk-white;
 }
 
@@ -74,7 +74,7 @@
 
   &>* {
     color: $chalk-white;
-    font-size: 1.2em;
+    font-size: 14px;
   }
 }
 
@@ -85,7 +85,7 @@
   color: $chalk-white;
 }
 .level-number{
-  font-size:1.8em;
+  font-size:14px;
 }
 .progress-container {
   color: $chalk-white;
@@ -111,7 +111,7 @@
   width: 100%;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 1em;
+  margin-top: 5px;
 }
 
 
@@ -157,7 +157,7 @@
 }
 
 .game-question {
-  padding: 3vmin;
+  padding: 2.5vmin;
 }
 
 .game-titles-group {
@@ -209,7 +209,7 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
   color: $chalk-white;
   width: 100%;
   text-align: center;
@@ -291,30 +291,50 @@
   text-rendering: optimizeLegibility;
   font-size: 16px; 
   font-family:'Pangolin';
-  color:$chalkboard-green;
   background-color: #f3e4be;
   color: $chalkboard-green;
   box-shadow: $cardShadow;
   transform: translate(0px, 0px);
   transition: 100ms transform ease, 50ms box-shadow ease;
-  width: 100px;
+  width:50px;
 }
 
 .answer-submit:active {
   box-shadow: 0px 0px 1px black;
   transform: translate(2px, 2px);
 }
-.badge-tracker-container{
+.icon-calculator{
+  font-size:24px;
+}
+.badge-tracker-container-challenge{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;;
+  flex-wrap:wrap;
    & > .badge{
-    width:15vw;
+    // width:15vw;
     >*{
       font-size:12px;
     }
   }
+}
+.badge-challenge {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 15px 0px;
+  height: 60px;
+  width: 60px;
+}
+.badge-description-level-challenge {
+  font-size: 11px;
+  color: $chalk-white;
+  margin-top: 10px;
+  height: 20px;
+  display: flex;
+  font-weight: 500;
 }
 .start-over{
   padding:5px;
