--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -135,6 +135,7 @@ body {
   .titles-left {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   
   .titles-group {
@@ -152,7 +153,7 @@ body {
   .activity-title,
   .activity-type {
     font-family: $chalkboardFont;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     height: auto;
     width: auto;
@@ -223,13 +224,13 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height:70px;
+    height:60px;
     width:275px;
   }
   .activity-title-container{
     background-color: rgba(255,255,255,0.1);
     border-radius: 200px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 5px;
   }
   .activity-title-container-menu{
