--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -1125,6 +1125,10 @@
         .profile-section{
             position:absolute;
             top:10vh;
+            height:90vh;
+        }
+        .profile-lower-right{
+            margin-bottom:20px;
         }
 
 
